Added session seal logic (makes a session read only)
